fix: broken font on mobile

--- a/public/sh1mmer/downloader/style.sass
+++ b/public/sh1mmer/downloader/style.sass
@@ -51,6 +51,9 @@ select, button
   font-size: 90%
   width: 150px
 
+summary
+  font-family: "SF-Reg", system-ui
+
 summary:after 
   content: "click to show credits"
   font-weight: bold
